examples/valid/last.lama
[int] a ;
a = [int] [1,2,3];
int res = a.last();
print res;