examples/invalid/unexpected_type.lama
int a = 1 ;
bool b = false ;
double c = 2 ;
print c ;